# linepipe

./: README.md  install.sh  pyproject.toml  uninstall.sh
data/: io.github.torcken.linepipe.desktop  io.github.torcken.linepipe.metainfo.xml
linepipe/: __init__.py  __main__.py  application.py  detail_panel.py  dialogs.py  notifications.py  package_list.py  pipx_interface.py  preferences.py  progress_dialog.py  pypi_index.py  style.css  utils.py  window.py
