[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linepipe"
version = "1.0.0"
description = "A modern GTK4/Adwaita GUI for managing pipx packages on Linux"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "Torcken", email = "torcken@users.noreply.github.com" }
]
keywords = ["pipx", "package-manager", "gtk4", "gnome", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "PyGObject>=3.44",
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/Torcken/linepipe"
Repository = "https://github.com/Torcken/linepipe"
"Bug Tracker" = "https://github.com/Torcken/linepipe/issues"

[project.scripts]
linepipe = "linepipe.application:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["linepipe*"]

[tool.setuptools.package-data]
linepipe = ["style.css"]

[tool.setuptools.data-files]
"share/applications" = ["data/io.github.torcken.linepipe.desktop"]
"share/metainfo"     = ["data/io.github.torcken.linepipe.metainfo.xml"]
"share/icons/hicolor/16x16/apps"     = ["data/icons/hicolor/16x16/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/22x22/apps"     = ["data/icons/hicolor/22x22/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/24x24/apps"     = ["data/icons/hicolor/24x24/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/32x32/apps"     = ["data/icons/hicolor/32x32/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/48x48/apps"     = ["data/icons/hicolor/48x48/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/64x64/apps"     = ["data/icons/hicolor/64x64/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/96x96/apps"     = ["data/icons/hicolor/96x96/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/128x128/apps"   = ["data/icons/hicolor/128x128/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/256x256/apps"   = ["data/icons/hicolor/256x256/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/512x512/apps"   = ["data/icons/hicolor/512x512/apps/io.github.torcken.linepipe.png"]
"share/icons/hicolor/1024x1024/apps" = ["data/icons/hicolor/1024x1024/apps/io.github.torcken.linepipe.png"]
